<resources>
    <string name="app_name">GeoQuest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="authentication">Authentication</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="comms_header">Communication</string>
    <string name="appearance_header">Appearance</string>
    <string name="audio_header">Audio</string>
    <string name="local_header">Localization</string>

    <!-- Comms Preferences -->
    <string name="notifs_title">Notifications</string>

    <!-- Audio Preferences -->
    <string name="sfx_title">Sound Effects</string>
    <string name="music_title">Music</string>

    <!-- Appearance Preferences -->
    <string name="theme_title">Theme</string>

    <!-- Localization Preferences -->
    <string name="lang_title">Language</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_profile_picture">Alterar Foto de Perfil</string>
    <string name="change_password">Alterar Palavra-passe</string>
    <string name="statistics">Estatísticas</string>
    <string name="user_name">Nome de Utilizador</string>
    <string name="account">Conta</string>
    <string name="joined">Juntou-se em ...</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="current_password">Palavra-passe Atual</string>
    <string name="new_password">Nova Palavra-passe</string>
    <string name="confirm_new_password">Confirmar Nova Palavra-passe</string>
    <string name="save_changes">Guardar Alterações</string>
    <string name="monuments_conquered">Monumentos Conquistados</string>
    <string name="monuments_left">Monumentos por conquistar</string>
    <string name="failed_attempts">Número de tentativas falhadas</string>
    <string name="average_quiz_completion_time">Média de tempo utilizado por Quiz</string>
    <string name="about">Sobre</string>
    <string name="dev_team">Projeto realizado por:</string>
    <string name="bernardo">Bernardo Mota 190221009</string>
    <string name="pedro">Pedro Guedes 160221031</string>
    <string name="andre">André Dias 190221068</string>
    <string name="miguel">Miguel Serrano 190221134</string>
    <string name="rodrigo">Rodrigo Raimundo 180221009</string>
    <string name="done_in">Feito no âmbito da disciplina de Computação Móvel 20/21</string>
    <string name="geo_quest">GeoQuest</string>
    <string name="icon">Icon</string>
</resources>