<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/comms_header">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifs_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">

        <SwitchPreferenceCompat
            app:key="sfx"
            app:title="@string/sfx_title" />

        <SwitchPreferenceCompat
            app:key="music"
            app:title="@string/music_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:key="appearance"
            app:title="@string/theme_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/local_header">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="lang"
            app:title="@string/lang_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>